# octopus

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
docs/design/: ink-design-system.md  terminal-design-system.md
docs/superpowers/plans/: 2026-06-30-calendar.md  2026-06-30-octopus-phase1a-backend.md  2026-06-30-octopus-phase1b-webui.md  2026-07-01-calendar-multicontact-dayview.md  2026-07-01-project-kanban.md  2026-07-01-project-management-upgrade.md  2026-07-01-recurring-events.md  2026-07-01-task-version-type.md  2026-07-02-contacts-relationship-hub.md  2026-07-02-favorite-links.md  2026-07-02-links-bookmarks.md  2026-07-02-mobile-responsive-ui.md  2026-07-02-pwa-installable.md  2026-07-03-notes-v2.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/scripts/: gen-icons.mjs
frontend/src/: App.svelte  app.css
frontend/src/lib/: api.js  api.test.js  (+19 more)
migrations/: 0001_init.sql  0002_events.sql  0003_notes.sql  0004_recurring.sql  0005_event_contacts.sql  0006_project_status_active_archived.sql  0007_project_contact_optional.sql  0008_task_fields.sql  0009_task_version_type.sql  0010_links.sql  0011_link_favorite.sql  0012_notes_v2.sql  0013_note_link_set_null.sql
src/: app.rs  auth.rs  error.rs  lib.rs  main.rs  models.rs
src/routes/: contacts.rs  dashboard.rs  events.rs  folders.rs  links.rs  mod.rs  notes.rs  projects.rs  tasks.rs
static/: index.html
tests/: auth.rs  contacts.rs  dashboard.rs  events.rs  folders.rs  health.rs  helpers.rs  links.rs  notes.rs  projects.rs  schema.rs  tasks.rs
(+30 files in other folders)
