[package]
name = "octopus"
version = "0.1.0"
edition = "2021"

[lib]
name = "octopus"
path = "src/lib.rs"

[[bin]]
name = "octopus"
path = "src/main.rs"

[dependencies]
axum = "0.8"
axum-extra = { version = "0.10", features = ["cookie-signed"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }   # "util" provides ServiceExt::oneshot used by tests
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
subtle = "2"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
# Transitive-compat pin: cookie 0.18.1 (via axum-extra) fails to build against time 0.3.52.
# Hold time at a pre-0.3.52 release. Remove once axum-extra/cookie ship a fix.
time = "=0.3.41"

[dev-dependencies]
http-body-util = "0.1"
